# MiqBOT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/migration/: mvp_to_unified.md
docs/runbooks/: mvp_bringup.md
mvp1_bridge_server/: Cargo.toml  DOMAIN_CHARTER.md  build.rs
mvp1_bridge_server/config/: bridge.toml
mvp1_bridge_server/scripts/: gen_certs.ps1  gen_certs.sh
mvp1_bridge_server/src/: config.rs  main.rs  pb.rs  relay.rs  tls.rs  ws.rs
mvp2_fabric_mod/: DOMAIN_CHARTER.md  build.gradle  gradle.properties  settings.gradle
mvp2_fabric_mod/src/main/java/io/MiqBOT/mod/: ActionExecutor.java  Config.java  MiqBOTClientMod.java  TelemetryCollector.java  TlsUtil.java  WsBridgeClient.java
mvp2_fabric_mod/src/main/resources/: fabric.mod.json
mvp3_tts_server/: DOMAIN_CHARTER.md  bench_variants.py  server.py
mvp4_obs_subtitles/: DOMAIN_CHARTER.md  config.properties  obs_common.py  obs_gateway.py  obs_subtitles.py  requirements.txt
mvp5_orchestrator/: Cargo.toml  DOMAIN_CHARTER.md  build.rs
mvp5_orchestrator/config/: orchestrator.toml
mvp5_orchestrator/src/: action_client.rs  action_ledger.rs  audio_player.rs  bridge_client.rs  config.rs  main.rs  pb.rs  pipeline.rs  speech_policy.rs  speech_queue.rs  state_actor.rs  subtitle_client.rs  tts_client.rs
proto/: MiqBOT_bridge_v1.proto
src/miqbot/: __init__.py  bot.py  main.py
