[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "miqbot"
version = "0.1.0"
description = "MiqBOT starter project"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
miqbot = "miqbot.main:main"

